updated related work with PPM Market Solutions

--- a/report.tex
+++ b/report.tex
@@ -4,6 +4,7 @@
 \usepackage{mathtools}
 \usepackage{lmodern}
 \usepackage{textcomp}
+\usepackage{booktabs}
 \usepackage[square,sort,comma,numbers]{natbib}
 \usepackage[nolist,nohyperlinks]{acronym}
 % Maintain images and tables within their respective sections
