--- a/sections/related-work.tex
+++ b/sections/related-work.tex
@@ -400,9 +400,9 @@ The objective of the Gartner Magic Quadrant is to provide a wide-angle view of t
 \item Challengers - Execute well today or may dominate a large segment, but do not demonstrate an understanding of market direction.
 \end{itemize}
 
-\begin{figure}[t!]
+\begin{figure}
 \centering
-\includegraphics[width=0.85\textwidth]{img/GartnerMagicQuadrant.png}
+\includegraphics{img/GartnerMagicQuadrant.png}
 \caption{Gartner Magic Quadrant representation}
 \end{figure}
 
@@ -433,15 +433,141 @@ We will present, for the PPM an ITSM tools, the corresponding Forrester Wave rep
 
 \subsection{Project and Portfolio Management Tools analysis}
 
-\subsubsection{Gartner Magic Quadrant for PPM solutions}
+To perform our analysis on available market solution for Project and Portfolio Management tools we will use the Gartner Magic Quadrant for IT Project and Portfolio Management from June 2010, the last published Magic Quadrant for this type of tools. We will present another Magic Quadrant, the Magic Quadrant for Cloud-Based IT Project and Portfolio Management Services from May 2014. For completing our analysis, we will also present the Gartner MarketScope for IT Project and Portfolio Management Software Applications and the Forrester Wave Project/Program Portfolio Management Q4 2012.\par 
 
-\subsubsection{Gartner Magic Quadrant for Cloud-Based Solutions}
+\subsubsection{Gartner Magic Quadrant for IT Project and Portfolio Management (June 2010)}
 
-\subsubsection{Gartner MarketScope}
+This Magic Quadrant was the last one published in this area by Gartner, due to the innovations and new requirements for Cloud-based solutions reported on subsection XXX.
+This quadrant focuses on the PPM market, where Gartner defines the core functionalities each PPM tool supplier must take in account to conform with the market needs. This functionalities are the following:
 
-\subsubsection{Forrester Wave}
+\begin{itemize}
+\item IT PPM - Support to Internal IT Project and Portfolio Management.
+\item NPD - New Product Development.
+\item PSA - Professional Services Administration.
+\item AEC - Traditional architecture, engineering and construction (AEC) environments.
+\item ITPC - IT Planning and Control.
+\item APM - Application Portfolio Management.
+\item EPPM - Enterprise PPM.
+\end{itemize}
+
+The Magic Quadrant document also provides some insight on the main challenges and problems the area faces actually and some advices, considerations and definitions for professionals in the area. Considering our purposes, in figure XXX we have the Magic Quadrant for IT Project and Portfolio Management from June 2010, and in figure XXX and XXX we have the Ability to execute and Completeness of vision evaluation criteria, respectively, presenting the weightings used on the evaluation of each supplier.\par
+
+\begin{figure}
+\centering
+\includegraphics{img/MQPPMTools.png}
+\caption{Gartner Magic Quadrant for IT Project and Portfolio Management (June 2010)}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{img/MQPPMToolsAbilityExecute.png}
+\caption{Ability to execute evaluation criteria}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{img/MQPPMToolsCompletess.png}
+\caption{Completeness of vision evaluation criteria}
+\end{figure}
+
+For this magic quadrant, and considering our project objectives, we will consider only the quadrant for the leaders taking in account we are looking for the most complete solution on all PPM market areas. For the leaders quadrant, we have product depth in the whole PPM core areas like demand management and analysis, advanced scheduling, resource and cost management and portfolio analysis, establishing a big difference to the challengers quadrant, where only some of them are fully addressed.\par
+Leaders also offer different multiple deployment options, as staged implementations, hosted or SaaS, making its solutions more flexible and applicable to different organization realities. Leaders share many attributes with visionaries or challengers, but they establish differentiation with high ratings in many areas by costumer references as evidence.\par
+For this quadrant, we have the vendors that dominate the market for medium and big size organizations. They are Planview with the product Planview Enterprise, Compuware with ChangePoint, CA with CA Clarity EPM, HP with HP PPM Center, Microsoft with EPM and Oracle with Primavera. In appendix, section XXX, we present the main strengths and cautions for each one of this solutions, based on Gartner's analysis.
+
+
+\subsubsection{Gartner MarketScope for IT Project and Portfolio Management Software Applications}
+
+This marketScope includes on-premises and cloud-hosted IT project portfolio management (PPM) providers that offers solutions for deploying its IT PPM applications on-site at the customer's facility (on-premises) or in a SaaS (cloud-hosted). This market is constantly growing and providers are investing more on SaaS solutions.\par
+On-premises and cloud-hosted IT PPM providers offer deployment options, allowing their customers to deploy a dedicated instance of their IT PPM applications on-site at the customer's facility or in the cloud in a hosting environment offered by the provider as a ``service''. [INSERT DIRECT REFERENCE HERE]\par
+For larger organizations, IT PPM solutions are being migrated to SaaS solutions, either for choosing providers presented on this marketScope or by providers presented in the Gartner's ``Magic Quadrant for Cloud- Based Project and Portfolio Management Services."[REFERENCE HERE].\par
+Providers in this MarketScope are mature and robust, some of them counting with decades of evolution. The providers and products presented in this marketScope will have the same level of flexibility, customization, configuration or extensions if you perform a cloud-based installation or an on-premises for the solution. However, there are some differences when choosing one of it. For example, choosing a cloud-host deployment can allow an organization to lease and not own a license to a dedicated instance, making the organization incur in less costs.\par
+In this marketScope we have small, midsize and large providers offering on-premises and/or cloud-hosted PPM applications and they are evaluated considering their ability to support large-enterprise IT departments. Consequently, providers with strong positive and positive ratings are suitable for supporting very large to large deployment and some of the ones rated as strong and promising are more suitable for midsize organizations.\par
+In table XXX we can see the evaluation criteria for this research, as well as the weights for each criteria. A more detailed evaluation criteria can be consulted in [INSERT REFERENCE HERE]. In figure XXX is presented the marketScope for IT Project and Portfolio Management Software Applications. An analysis for each product/service in available in the MarketScope document [INSERT REFERENCE HERE].
+Considering the MarketScope results presented, we can see that the solutions analyzed in the Gartner Magic Quadrant as the leaders and the ones we will consider for this project obtained a positive or strong positive rating in the MarketScope research. We can conclude that this providers, despite being leaders in the PPM market, also provide products/services that are flexible and adaptable to emerging markets with constant changes in requirements by the clients.
+
+
+\begin{table}[h]
+\centering
+\begin{tabular}{|c|c|}
+\hline
+\textbf{Evaluation Criteria} & \textbf{Weighting} \\ \hline
+Customer Experience & High \\ \hline
+Offering (Product) Strategy & Standard \\ \hline
+Product Service & High \\ \hline
+Business Model & High \\ \hline
+Innovation & High \\ \hline
+Market Understanding & High \\ \hline
+Market Responsiveness and Track Record & High \\ \hline
+\end{tabular}
+\caption{Gartner MarketScope for IT Project and Portfolio Management Software Applications Evaluation Criteria}
+\label{my-label}
+\end{table}
+
+\begin{figure}
+\centering
+\includegraphics{img/MarketScopePPM.png}
+\caption{Gartner MarketScope for IT Project and Portfolio Management Software Applications Results}
+\end{figure}
+
+
+\subsubsection{The Forrester Wave: Project/Program Portfolio Management, Q4 2012}
+
+As stated by Forrester, ``Agile development disrupts operations and governance processes such as project/program portfolio management (PPM). That disruption drives a bifurcation in the tools market — traditional PPM doesn’t suit the lighter-weight/ Lean governance processes that Agile projects require.''. The different organization needs for business make the tools and vendors choice a difficult process. For helping in this process, Forrester performed an 68-criteria evaluation of PPM vendors identifying the 10 most significant PPM vendors, comparing them  considering market’s bifurcation and its constantly change.\par
+This research was performed considering two Forrester Wave Models. As defined by Forrester in [INSERT REFERENCE HERE], ``Above-the-line vendors serve enterprises primarily interested in portfolio planning, with linkage to tactical work planning and execution. Below-the-line vendors support enterprises seeking immediate help with planning, execution, and work management.''\par
+The vendors 68-evaluation criteria are grouped in three high-level groups: Current offering (deployment options, global support, and features for top-down portfolio planning or work-driven execution.), Strategy (product strategy, deployment options, support, and pricing) and Market Presence (revenue growth, financial strength, sales and support services, and the ability to support global implementations).\par
+For this evaluation were considered 10 vendors, selected following the vendor selection criteria presented in figure XXX. Information about the products offered by this vendors are available in figure XXX.\par
+
+\begin{figure}
+\centering
+\includegraphics{img/AboveLineCriteria.png}
+\caption{Vendors selection criteria}
+\end{figure}
+
+
+\begin{figure}
+\centering
+\includegraphics{img/AboveLineVendors.png}
+\caption{Above the line selected vendors}
+\end{figure}
+
+In figure XXX we can see the Forrester Wave for Above-The-Line Project/Program Portfolio Management and in figure XXX the detailed scores by high-level criteria. HP, CA Technologies, Planview, and Daptiv are leaders for this market, being followed by Microsoft, Planisware, Rally, AtTask, and Clarizen that offers competitive solutions, with less strategic alignment capabilities than the leaders group. GenSight has good and solid functionalities, some of them exceeding the leaders ones, but takes a much specialized approach for portfolio management, obtaining a very low score on strategy criteria.\par
+Considering the leaders group, HP’s strategy for integrated portfolio management and delivery make it a Leader while CA Technologies offers robust analytics at transactional and strategic levels. Analytics and integration are the best qualities for Planview and Daptiv's functional strength on multiple fronts makes it stand out.\par
+
+
+
+\begin{figure}
+\centering
+\includegraphics{img/AboveLineWave.png}
+\caption{Forrester Wave for Above-The-Line Project/Program Portfolio Management}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{img/AboveLineScores.png}
+\caption{Forrester Wave for Above-The-Line Project/Program Portfolio Management detailed scores by high-level criteria}
+\end{figure}
+
+
+In figure XXX we can see the Forrester Wave for Below-The-Line Project/Program Portfolio Management and in figure XXX the detailed scores by high-level criteria. HP, Planview, and CA Technologies are clearly the big leaders, proving good features on Agile planning, resource management, and reporting support. Microsoft, Rally, and Daptiv are also leaders, but with lower scores on current offering and strategy criteria groups. AtTask, Clarizen, and Planisware offer competitive solutions facing leaders solutions, but are designed for different types of work environments. GenSight solution is too much strategic planning oriented, making it only a contender for leaders and strong performers\par
+Considering the leaders group, HP Project Management provides the best solution in terms of managing various types of projects from traditional to Agile. Planview places its emphasis on pipeline management, resource planning, and reporting. CA Clarity PPM provides the most comprehensive planning solutions for project and work management while Microsoft EPM is the best project-planning tool at the desktop level. Rally has an outstanding performance as agile project management tool. Daptiv provides interesting functionalities on project and work management.\par
+
+
+
+\begin{figure}
+\centering
+\includegraphics{img/BelowLineWave.png}
+\caption{Forrester Wave for Below-The-Line Project/Program Portfolio Management}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{img/BelowLineScores.png}
+\caption{Forrester Wave for Below-The-Line Project/Program Portfolio Management detailed scores by high-level criteria}
+\end{figure}
 
 \subsection{IT Service Support Management Tools analysis}
+
+To assess the available market solutions for IT Service Support Management tools we will use the Gartner Magic Quadrant for IT Service Support Management Tools from August 2014. Also from Gartner, we will analyze the Critical Capabilities for IT Service Support Management Tools from August 2014. To provide a more wider and heterogeneous view for this type of tools, we will consider the Forrester Wave: ITSM SaaS Delivery Capabilities, Q3 2014\par 
 
 \subsubsection{Gartner Magic Quadrant for ITSM solutions}
 
