Added related work on ITSM solutions

--- a/sections/related-work.tex
+++ b/sections/related-work.tex
@@ -569,12 +569,127 @@ Considering the leaders group, HP Project Management provides the best solution 
 
 To assess the available market solutions for IT Service Support Management tools we will use the Gartner Magic Quadrant for IT Service Support Management Tools from August 2014. Also from Gartner, we will analyze the Critical Capabilities for IT Service Support Management Tools from August 2014. To provide a more wider and heterogeneous view for this type of tools, we will consider the Forrester Wave: ITSM SaaS Delivery Capabilities, Q3 2014\par 
 
-\subsubsection{Gartner Magic Quadrant for ITSM solutions}
+\subsubsection{Magic Quadrant for IT Service Support Management Tools}
 
-\subsubsection{Gartner Critical Capabilities Cloud-Based Solutions}
+This Magic Quadrant provides a precious support on ITSM tools analysis and choice for professionals in IT Service Management, specially infrastructure and operations (I\&O) managers, looking to provide support for IT services delivered. ITSSM tools help on management processes of IT services delivered by the organization, automatizing the tasks and workflows for quality IT services delivery to the business.\par
+as stated by Gartner in [INSERT REFERENCE HERE], ``the market for ITSSM tools is segmented according to the vendors' abilities to provide strong ITSSM capabilities and high levels of ease of integration with broader IT operations management functionalities.''. Therefore, we can have basic, intermediate and advance vendors considering its ability to integrate with third-party IT Operations Management solutions and the set of ITSM functionalities. Each organization should analyze its own Infrastructure and Operations (I\&O) maturity level and choose an adequate solution. Basic or intermediate tools are suitable for low maturity I\&O organizations while advance solutions are better option for the high maturity ones.\par
+In figure XXX we have the Magic Quadrant for IT Service Support Management Tools from August 2014, and in figure XXX and XXX we have the Ability to execute and Completeness of vision evaluation criteria, respectively, presenting the weightings used on the evaluation of each supplier.\par
 
-\subsubsection{Forrester Wave}
+\begin{figure}
+\centering
+\includegraphics{img/MQPPMTools.png}
+\caption{Gartner Magic Quadrant for IT Service Support Management Tools (August 2014)}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{img/AbilityToExecuteITSM.png}
+\caption{Ability to execute evaluation criteria}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{img/CompletenessOfVisionITSM.png}
+\caption{Completeness of vision evaluation criteria}
+\end{figure}
+
+For this magic quadrant, and considering our project objectives, we will consider only the Leaders and Challengers quadrants, taking in account we are interested in a complete ITSM solution suited for different levels of maturity on I\&O management. For the leaders quadrant, composed by BMC and ServiceNow, we have good market shares (29\% and 21\% respectively) and the desired levels of marketing and sales capabilities for market acceptance.\par 
+In the challengers quadrant, CA Technologies and Cherwell Software have growing shares of the market and present good improvements for products providing ITSM solutions. They offer its competitive products with good viability levels for the market.\par
+Considering the results presented in this magic quadrant, we will consider the following solutions: ServiceNow IT Service Automation Suite from ServiceNow, BMC Remedy ITSM Suite, BMC FootPrints Service Core and BMC Remedyforce from BMC Software, Cherwell Service Management from Cherwell Software and CA Service Management and CA Cloud Service Management from CA Technologies.\par
+
+\subsubsection{Gartner Critical Capabilities for IT Service Support Management Tools}
+
+For complementing the vendors analysis performed by the Gartner Magic Quadrant for IT Service Support Management Tools, we will also consider the Gartner's Critical Capabilities for IT Service Support Management Tools from August 2014, providing an evaluation of ITSSM tools' critical capabilities in five use cases.\par
+As defined by gartner in [INSERT REFERENCE HERE], the use cases evaluated are:
+
+\begin{itemize}
+\item Low to Medium Maturity - Focused on incident and problem management capabilities, high ease-of-use levels, and out-of-the-box best-practice capabilities.
+\item Medium to High Maturity - Focused on incident and problem management capabilities, with increased weighting for integrated change, configuration and release management capabilities.
+\item High Maturity - Places significant weight on change, configuration and release capabilities, as well as integration with broader ITOM functionalities.
+\item Digital Workplace - Focuses on high weights for IT service request management and IT knowledge management. This scores the products' ability to appeal to business users.
+\item Total ITSSM - Organizations focus on a single tool or suite of tools from one vendor to provide broad service support management functions.
+\end{itemize}
+
+For product capabilities ratings, Gartner uses the following capabilities:
+
+\begin{itemize}
+\item Incident and Problem
+\item Change, Configuration and Release
+\item Service Request Management
+\item IT Knowledge Management
+\item Reporting and Dashboards
+\item Out-of-the-Box Best Practices
+\item Data Source/ITOM Tool Integration
+\item Telephony/UCC Platform Integration
+\item Product Setup and Complexity
+\end{itemize}
+
+From figure XXX to figure XXX we have the products or services score for each Use case considered. As we can see, for Low to Medium Maturity use case, Cherwell and EasyVista solutions are the one that have the higher score, presenting good incident and problem management capabilities, high ease-of-use levels, and out-of-the-box best-practice capabilities. For the all other use cases, ServiceNow and BMC solutions lead the market, providing good scores for all the desired capabilities on an ITSM tool.\par
+More detailed information on each product or service performance on this evaluation can be consulted in [INSERT REFERENCE HERE].
+
+\begin{figure}
+\centering
+\includegraphics{img/LowMediumScores.png}
+\caption{Vendors' Product Scores for the Low to Medium-Maturity Use Case}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{img/MediumHighScores.png}
+\caption{Vendors' Product Scores for the Medium to High-Maturity Use Case}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{img/HighScores.png}
+\caption{Vendors' Product Scores for the High-Maturity Use Case}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{img/DigitalWorkplaceScores.png}
+\caption{Vendors' Product Scores for the Digital Workplace Use Case}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{img/TotalITSMScores.png}
+\caption{Vendors' Product Scores for the Total ITSSM Use Case}
+\end{figure}
 
 
+\subsubsection{Forrester Wave: ITSM SaaS Delivery Capabilities for Q3 2014}
+
+As stated by Forrester, ``How an IT or business service is delivered directly affects the quality of experience for the service consumer and the reputation of the infrastructure and operations (I\&O) team that delivers the services.''. The need for Saas ITSM vendors' ITSM solutions evaluation lead to this 30-criteria evaluation of the top 10 most significant vendors in ITSM market by Forrester.\par
+
+The vendors 30-evaluation criteria are grouped in three high-level groups: Current offering (client feedback, scope of predefined service, breadth of offering, availability and resiliency, security and compliance, upgradability and services activation time), Strategy (customer experience, digital disruption, big data, and mobile mind shift) and Market Presence (number of enterprise customers, corporate profitability, ITSM SaaS growth).\par
+Considering the Features and Functionality assessment of ITSM SaaS Vendors, the main core areas are the enablement of the most commonly adopted ITSM capabilities (incident, service request, problem, change, knowledge, service-level, and configuration management), the configuration management database (CMDB) or better service information system (SIS), a service portal (or exchange) with self-service capabilities and the enablement of social, mobility, and automation capabilities.\par
+For this evaluation were considered 10 vendors, selected following the vendor selection criteria presented in figure XXX. Information about the products offered by this vendors are available in figure XXX.\par
+
+\begin{figure}
+\centering
+\includegraphics{img/VendorSelectionCriteriaITSM.png}
+\caption{Vendors selection criteria}
+\end{figure}
 
 
+\begin{figure}
+\centering
+\includegraphics{img/ITSMVendorsInfo.png}
+\caption{Top 10 selected vendors}
+\end{figure}
+
+In figure XXX we can see the Forrester Wave: ITSM SaaS Delivery Capabilities for Q3 2014 and in figure XXX the detailed scores by high-level criteria. SysAid Technologies, Cherwell Software and ServiceNow are leaders for this market while all the other vendors follows them, being rated as strong performers. The leaders show high ITSM SaaS delivery capabilities and stand apart in customer feedback. While the strong performers vendors present good results for some criteria, they lack on other ones, making them a less complete solution for the ITSM Market\par
+All the leaders supply solutions that are aimed for all markets, making the difference stand only on specific features or details of each solution. Customers should conduct a detailed analysis to the detailed scores in figure XXX to conclude what is the best solution for a given criteria type.\par
+
+\begin{figure}
+\centering
+\includegraphics{img/ForresterWaveITSM.png}
+\caption{Forrester Wave: ITSM SaaS Delivery Capabilities}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{img/ITSMForrScores.png}
+\caption{Forrester Wave: ITSM SaaS Delivery Capabilities detailed scores by high-level criteria}
+\end{figure}
