Finished Related work. All document revised and formatted. Only missing solution architecture.

--- a/refs.bib
+++ b/refs.bib
@@ -223,6 +223,33 @@
   year={2010}
 }
 
+@article{cmmiAcquisition,
+  title={CMMI{\textregistered} for Acquisition, Version 1.3, Improving processes for acquiring better products and services},
+  author={Team, CMMI Product},
+  journal={no. CMU/SEI-2010-TR-032. Software Engineering Institute},
+  year={2010}
+}
+
+@article{cmmiServices,
+  title={CMMI{\textregistered} for Services, Version 1.3, Improving processes for providing better services},
+  author={Team, CMMI Product},
+  journal={no. CMU/SEI-2010-TR-034. Software Engineering Institute},
+  year={2010}
+}
+
+@book{appraisalReqs,
+  title={Appraisal Requirements for CMMI Version 1.3 (ARC, V1.3)},
+  author={Team, CMMI Product},
+  journal={no. CMU/SEI-2011-TR-006. Software Engineering Institute},
+  year={2010}
+}
+
+@article{Scampi,
+  title={Standard CMMI Appraisal Method for Process Improvement (SCAMPI) A, Version 1.3: Method Definition Document},
+  author={Team, SCAMPI Upgrade},
+  year={2011}
+}
+
 @book{cobit4,
   title={COBIT{\textregistered} 4.1: Framework, Control Objectives, Management Guidelines, Maturity Models},
   author={Institute, I.T.G.},
@@ -259,6 +286,92 @@
   pages={211--225},
   year={1998},
   publisher={Springer}
+}
+
+@article{magicQuadrantPPM,
+  title={Magic quadrant for IT project and portfolio management},
+  author={Stang, Daniel B.},
+  journal={Gartner RAS Core Research Note, Gartner Research},
+  year={2010}
+}
+
+@article{magicQuadrantITSM,
+  title={Magic Quadrant for IT Service Support Management Tools},
+  author={Greene, Jarod and Matchett, Chris and Bandopadhyay, Tapati},
+  journal={Gartner RAS Core Research Note, Gartner Research},
+  year={2014}
+}
+
+@article{magicQuadrantCloud,
+  title={Magic Quadrant for Cloud-Based IT Project and Portfolio Management Services},
+  author={Stang, Daniel B. and Handler, Robert A.},
+  journal={Gartner RAS Core Research Note, Gartner Research},
+  year={2014}
+}
+
+@article{criticalCapabilitiesITSM,
+  title={Critical Capabilities for IT Service Support Management Tools},
+  author={Greene, Jarod and Matchett, Chris and Bandopadhyay, Tapati},
+  journal={Gartner RAS Core Research Note, Gartner Research},
+  year={2014}
+}
+
+@article{MarketScopePPM,
+  title={MarketScope for IT Project and Portfolio Management Software Applications},
+  author={Stang, Daniel B. and Handler, Robert A.},
+  journal={Gartner RAS Core Research Note, Gartner Research},
+  year={2014}
+}
+
+
+@article{forresterWavePPM,
+  title={The Forrester Wave: Project/Program Portfolio Management, Q4 2012},
+  author={Visitacion, margo and Murphy, Phil},
+  journal={Forrester Research},
+  year={2012}
+}
+
+@article{forresterWaveITSM,
+  title={The Forrester Wave: ITSM SaaS Delivery Capabilities, Q3 2014},
+  author={DeMartine, Amy},
+  journal={Forrester Research},
+  year={2014}
+}
+
+@article{ForresterAbout,
+author = {Research, Forrester},
+title = {About Forrester},
+publisher = {2014. [ONLINE]. Available in:http://www.forrester.com/marketing/about/about-us.html}
+}
+
+@article{ForresterWave,
+author = {Research, Forrester},
+title = {The Forrester Wave Methodology Guide},
+publisher = {2014. [ONLINE]. Available in:https://www.forrester.com/marketing/policies/forrester-wave-methodology.html}
+}
+
+@article{GartnerAbout,
+author = {Inc., Gartner},
+title = {About Us},
+publisher = {2014. [ONLINE]. Available in:http://www.gartner.com/technology/about.jsp}
+}
+
+@article{GartnerMagicQuadrant,
+author = {Inc., Gartner},
+title = {Gartner Magic Quadrant},
+publisher = {2014. [ONLINE]. Available in:http://www.gartner.com/technology/research/methodologies/research_mq.jsp}
+}
+
+@article{GartnerCriticalCapabilities,
+author = {Inc., Gartner},
+title = {Gartner Critical Capabilities},
+publisher = {2014. [ONLINE]. Available in:http://www.gartner.com/technology/research/methodologies/research_critcap.jsp}
+}
+
+@article{GartnerMarketScope,
+author = {Inc., Gartner},
+title = {Gartner MarketScope},
+publisher = {2014. [ONLINE]. Available in:http://www.gartner.com/technology/research/methodologies/research_markets.jsp}
 }
 
 
