--- a/sections/problem-contextualization.tex
+++ b/sections/problem-contextualization.tex
@@ -12,7 +12,7 @@ When a request is submitted to the information systems management, it should be 
 This project is aligned with a real case of an organization with 600 collaborators where the information systems department administration has 15 elements including the director and the team leaders. This management is composed by the department of evolving maintenance and the department of projects execution.\par
 The request classification will depend on many factors. We can decide it by taking in account aspects like the risk to the business or the financial impact for the organization. In the end, it depends on the organizational culture and how it considers what is a maintenance operation and what is a project.\par
 After classified, we need to define the request fulfillment in terms of processes to consider and communication channels between the project and the maintenance department, assuming they are independent but need to be coordinated.\par
-Considering the software life cycle processes, presented by the International Standard ISO/IEC 12207\cite{ISO12207} presented in more detail in section X, we can divide this processes in two groups: Software Specific Processes and System Context processes.\par
+Considering the software life cycle processes, presented by the International Standard ISO/IEC 12207\cite{ISO12207} presented in more detail in section 5, subsection 1, we can divide this processes in two groups: Software Specific Processes and System Context processes.\par
 The system context processes are more focused on systems engineering, providing a system context for dealing with a standalone software product or service or a software system. The software specific processes are, on the other hand, used for implementing a software product or service that is an element of a larger system. \par 
 The main challenge of our problem is to identify and implement the necessary processes from the software life cycle processes that are important for our objectives, defining activities and responsibilities inside the organization.\par
 As long as we are dealing with an established organization in the market, we need to take in account that our process will be implemented in an existent organizational structure. It is necessary to develop a logical application architecture, using market solutions from the area of Project management and IT Service Support Management, that will be architecturally integrated to support our process. We will need to assess the market solutions already available to conclude which are the best in terms of features and interest for the project. 
