--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -7,12 +7,11 @@
 \section{Introduction}
 
 
-Currently, information systems organizations moved from the limited perspective of profitability to a more wider view of the business, trying to maximize the business performance by increasing client satisfaction, products' quality and management efficiency in comparison with the concurrency. Information Technologies (IT) were applied to business activities to achieve this goal from early.\par 
-As stated in \cite{itilSS}, ``Information Technology (IT) enable, enhance, and are embedded in a growing number of goods and services. They are connecting consumers and producers of services in ways previously not feasible, while contributing to the productivity of numerous sectors of the services industry such as financial services, communications, insurance, and retail services.''\par
-Although it is undeniable that IT brings new ways of productivity and performance growth, it is fundamental that organization ensures processes for its management and governance, making IT an even more important asset and always aligned with the organization business objectives. Management on information systems is all about leadership, organizational structures and processes that ensure information systems support and alignment with organization's objectives. Information systems provide a competitive edge to concurrents, but an organization can only achieve management efficiency with well defined and matured processes.\par
+Currently, information systems organizations moved from the limited perspective of profitability to a more wider view of the business, trying to maximize the business performance by increasing client satisfaction, products' quality and management efficiency in comparison with concurrency. Information Technologies (IT) were applied to business activities to achieve this goal from early.\par 
+As stated in \cite{itilSS}, \textit{``Information Technology (IT) enable, enhance, and are embedded in a growing number of goods and services. They are connecting consumers and producers of services in ways previously not feasible, while contributing to the productivity of numerous sectors of the services industry such as financial services, communications, insurance, and retail services.''}\par
+Although it is undeniable that IT brings new ways of productivity and performance growth, it is fundamental that organization ensures processes for its management and governance, making IT an even more important asset and always aligned with the organization business objectives. Management on information systems is all about leadership, organizational structures and processes that ensure information systems support and alignment with organization's culture. Information systems provide a competitive edge to concurrents, but an organization can only achieve management efficiency with well defined and matured processes.\par
 One important part of business for an organization take advantage of its concurrency is the way how it deals with receipt and management of project execution and evolution maintenance requests. There is a inherent necessity to classify a new request in terms of opportunities  and value to the business as well as the risk associated with it, making it an important asset for the organization. Furthermore, the organization needs to possess clearly defined processes and structures for managing this requests. when a new request is purposed to an organization, it should be dealt based on a pre-defined process that will, independently of its source or type, define activities, inputs, outputs and responsibilities during the whole request life cycle until its fulfillment. \par
-For establishing standards on this subjects, business professionals came across with several frameworks and practical guides, making an attempt to provide and standardize many practices around management on information systems.\par
-Considering the state of the art, COBIT assumes a major position on good practices for information systems management. It provides a complete framework for implementing management and governance processes, taking in account a set of enablers and goals, from IT-related to business.\par
+For establishing standards on this subjects, business professionals came across with several frameworks and practical guides, making an attempt to provide and standardize many practices around management on information systems.Considering the state of the art, COBIT assumes a major position on good practices for information systems management. It provides a complete framework for implementing management and governance processes, taking in account a set of enablers and goals, from IT-related to business.\par
 For a more technical approach, oriented to IT services, we have ITIL V3, consisting in a good practices manual for managing IT services, during its life cycle. ITIL is divided in five volumes, comprising all the life cycle of IT services: service Strategy, service design, service transition, service operation and service continual improvement,\par
 PMBOK is the project management guide widely accepted by professionals from all areas of knowledge. It explores the processes that make part of the project life cycle, presenting them in a general way to all areas, making it universally applicable.\par
 Considering that cooperation among organizations is fundamental on the actual business definitions, processes compliance with international standards is important for better acceptance of process activities and objectives. Thus, we will consider a set of standards in project management areas as IT service, risk or auditing management.\par   
